# claudex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile
.github/ISSUE_TEMPLATE/: provider-breakage.md
.github/workflows/: ci.yml
docs/: brief.md  technical-prd.md
src/: cli.rs  config.rs  handoff_store.rs  main.rs  render.rs  select.rs  settings.rs
src/providers/: claude.rs  codex.rs
tests/: claude_provider.rs  cli_integration.rs  codex_provider.rs  handoff_store.rs  launcher.rs  render_snapshots.rs  settings.rs
tests/fixtures/claude/project-alpha/: fixture-invalid.jsonl  fixture-multibyte.jsonl  fixture-simple.jsonl  fixture-tools.jsonl  fixture-unknown.jsonl
tests/snapshots/: claude_provider__multibyte.snap  claude_provider__simple-dialogue.snap  claude_provider__tool-call.snap  claude_provider__unknown-event.snap
thoughts/arcs/20260514_claudex-v1/: prologue.md  worklog.md
thoughts/arcs/20260514_claudex-v1/chapters/: A-scaffold-types-config.md  B-render-truncate-store.md  C-claude-provider.md  D-codex-provider.md  E-cli-select-launch.md
