[package]
name = "claudex"
version = "0.1.0"
edition = "2021"
description = "A local CLI for handing active work between Claude Code and Codex."
license = "MIT"
readme = "README.md"
repository = "https://github.com/newtoallofthis123/claudex"
homepage = "https://github.com/newtoallofthis123/claudex"
keywords = ["cli", "codex", "claude", "handoff", "agents"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
time = { version = "0.3", features = ["formatting", "parsing", "serde-human-readable", "local-offset", "macros"] }
toml = "0.8"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "claudex"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
